--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   json_annotation: ^4.8.1
+  ar_flutter_plugin: ^0.7.3
 
 dev_dependencies:
   flutter_test:
