--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,17 +8,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
   http: ^1.1.0
-  json_annotation: ^4.8.1
   ar_flutter_plugin: ^0.7.3
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  json_serializable: ^6.7.1
-  build_runner: ^2.4.6
 
 flutter:
 
@@ -27,10 +24,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # To add assets to your 
+  assets:
+    - assets/gltf/chicken/
+    - assets/png/triangle.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
