--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ flutter:
 
   # To add assets to your 
   assets:
+    - assets/glb/Nespresso.glb
     - assets/gltf/chicken/
     - assets/png/triangle.png
 
