Initialisation de la page d'accueil et de lecture du qr code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   http: ^1.1.0
   ar_flutter_plugin: ^0.7.3
   vector_math: ^2.1.4
+  mobile_scanner: ^3.3.0
 
 dev_dependencies:
   flutter_test:
