--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
   assets:
     - assets/gltf/chicken/
     - assets/png/triangle.png
+    - assets/png/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
