--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   vector_math: ^2.1.4
   mobile_scanner: ^3.3.0
   google_fonts: ^5.1.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
