--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   mobile_scanner: ^3.3.0
   google_fonts: ^5.1.0
   shared_preferences: ^2.2.0
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your 
   assets:
     - assets/png/triangle.png
     - assets/png/logo.png
