--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   mockito: ^5.0.0
+  mocktail: ^1.0.0
+  test: ^1.24.1
+  http: ^1.1.0
 
 flutter:
 
